--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name | Data Science Portfolio</title>
+    <title>Sarim Zubair | Data Science Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
@@ -111,7 +111,7 @@
     </nav>
 
     <section id="about">
-        <h1>Hi, I'm [Your Name].</h1>
+        <h1>Hi, I'm Sarim Zubair.</h1>
         <p style="max-width: 700px; font-size: 1.1rem; color: var(--secondary);">
             I am a Data Scientist focused on translating complex data into actionable business impact. 
             Currently specializing in predictive modeling and exploratory analysis for the real estate and automotive sectors.
@@ -122,7 +122,7 @@
         <h2>Selected Projects</h2>
         <div class="project-grid">
             <div class="project-card">
-                <h3>Salifort Motors Turnover</h3>
+                <h3>Strategic Turnover Mitigation | Salifort Motors</h3>
                 <p>Developed a predictive analytics solution to address high attrition rates, identifying key drivers of turnover to reduce recruitment costs.</p>
                 <div class="tags">
                     <span class="tag">Python</span>
@@ -132,7 +132,7 @@
             </div>
 
             <div class="project-card">
-                <h3>NYC Taxi Fare Estimation</h3>
+                <h3>NYC Taxi Fare Prediction & Pricing Strategy | Automatidata</h3>
                 <p>Built a robust regression engine to provide upfront fare transparency, enhancing rider trust and operational predictability.</p>
                 <div class="tags">
                     <span class="tag">Machine Learning</span>
@@ -142,7 +142,7 @@
             </div>
 
             <div class="project-card">
-                <h3>S.S. Lootah Real Estate</h3>
+                <h3>Real Estate Portfolio Optimization | S.S. Lootah Real Estate</h3>
                 <p>Transformed fragmented property data into a decision-ready dashboard for tracking revenue and occupancy trends.</p>
                 <div class="tags">
                     <span class="tag">Pandas</span>
@@ -157,14 +157,14 @@
         <h2>Get In Touch</h2>
         <p style="margin-bottom: 1.5rem;">I'm always open to discussing data-driven opportunities or technical collaborations.</p>
         <div class="contact-links">
-            <a href="mailto:your.email@example.com">Email</a>
-            <a href="https://linkedin.com/in/yourprofile">LinkedIn</a>
-            <a href="https://github.com/yourusername">GitHub</a>
+            <a href="sarim.zubair@icloud.com">Email</a>
+            <a href="https://www.linkedin.com/in/sarimzubair/">LinkedIn</a>
+            <a href="https://github.com/szubaira">GitHub</a>
         </div>
     </section>
 
     <footer>
-        &copy; 2026 [Your Name]. Built with minimal CSS.
+        &copy; 2026 Sarim Zubair. Built with minimal CSS.
     </footer>
 
 </body>
