--- a/index.html
+++ b/index.html
@@ -121,22 +121,9 @@
 
     <section id="projects">
         <h2>Selected Projects</h2>
-        <style>
-        .project-card h3 a {
-            text-decoration: none;
-            color: var(--text);
-            transition: color 0.3s;
-        }
-        .project-card h3 a:hover {
-            color: var(--accent);
-        }
-    </style>
-
-    <section id="projects">
-        <h2>Selected Projects</h2>
         <div class="project-grid">
             <div class="project-card">
-                <h3><a href="https://github.com/szubaira/Employee-Turnover-Prediction" target="_blank">Strategic Turnover Mitigation | Salifort Motors &rarr;</a></h3>
+                <h3><a href="https://github.com/szubaira/Employee-Turnover-Prediction" target="_blank">Strategic Turnover Mitigation &rarr;</a></h3>
                 <p>Developed a predictive analytics solution to address high attrition rates, identifying key drivers of turnover to reduce recruitment costs.</p>
                 <div class="tags">
                     <span class="tag">Python</span>
@@ -146,7 +133,7 @@
             </div>
 
             <div class="project-card">
-                <h3><a href="https://github.com/szubaira/Taxi-Fare-Estimation" target="_blank">NYC Taxi Fare Prediction & Pricing Strategy | Automatidata &rarr;</a></h3>
+                <h3><a href="https://github.com/szubaira/Taxi-Fare-Estimation" target="_blank">NYC Taxi Fare Prediction & Pricing Strategy &rarr;</a></h3>
                 <p>Built a robust regression engine to provide upfront fare transparency, enhancing rider trust and operational predictability.</p>
                 <div class="tags">
                     <span class="tag">Machine Learning</span>
@@ -156,7 +143,7 @@
             </div>
 
             <div class="project-card">
-                <h3><a href="https://github.com/szubaira/Real-Estate-Data-Analysis" target="_blank">Real Estate Portfolio Optimization | S.S. Lootah Real Estate &rarr;</a></h3>
+                <h3><a href="https://github.com/szubaira/Real-Estate-Data-Analysis" target="_blank">Real Estate Portfolio Optimization &rarr;</a></h3>
                 <p>Transformed fragmented property data into a decision-ready dashboard for tracking revenue and occupancy trends.</p>
                 <div class="tags">
                     <span class="tag">Pandas</span>
