--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <body>
 
     <nav>
-        <div style="font-weight: 700; font-size: 1.2rem;">NAME.DS</div>
+        <div style="font-weight: 700; font-size: 1.2rem;">Data Science Portfolio</div>
         <div>
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
