--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </section>
 
     <footer>
-        &copy; 2026 Sarim Zubair. Built with minimal CSS.
+        &copy; 2026 Sarim Zubair.
     </footer>
 
 </body>
